--- a/app/views/userparams/show.html.erb
+++ b/app/views/userparams/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Userparams#show</h1>
-<p>Find me in app/views/userparams/show.html.erb</p>
+<br>
+<h3>Профіль користувача:
+<b><%=current_user.email.split('@').first%></b></h3><br>
+<h5>  Ім'я:  <%=current_user.userparam.firstname%></h5>
+<h5>Прізвище:  <%=current_user.userparam.lastname%></h5>
+<h5>Вік:   <%=current_user.userparam.age %></h5>
+<%if user_signed_in? && current_user.id == current_user.id%>
+<%=link_to "Редагувати профіль", edit_userparam_path(current_user.id)%><br>
+<%=link_to "Change devise profile", edit_user_registration_path%><br>
+<%end%>
