--- a/app/views/userparams/edit.html.erb
+++ b/app/views/userparams/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Userparams#edit</h1>
-<p>Find me in app/views/userparams/edit.html.erb</p>
+<h3>Профіль користувача
+  <b><%=@userparam.user.email.split('@').first%></b>
+</h3>
+<%=form_for @userparam, url:userparam_path(current_user.id) do |f|%>
+<%=render 'userparams/form', f:f%>
+<%=f.submit "Update"%>
+<%end%>
