--- a/app/views/userparams/new.html.erb
+++ b/app/views/userparams/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Userparams#new</h1>
-<p>Find me in app/views/userparams/new.html.erb</p>
+<div class="col-md-6 col-md-offset-3 login-box">
+  <%= form_for @userparam, url: userparams_path do |f| %>
+  <%=render 'userparams/form', f:f%>
+  <%= f.submit "Create" %>
+<% end %>
+</div>
