--- a/app/views/userparams/show.html.erb
+++ b/app/views/userparams/show.html.erb
@@ -1,6 +1,6 @@
 <br>
 <h3>Профіль користувача:
-<b><%=current_user.email.split('@').first%></b></h3><br>
+<b><%=current_user.userparam.username%></b></h3><br>
 <%= image_tag current_user.userparam.avatar.url(:thumb) %><br>
 <h5>  Ім'я:  <%=current_user.userparam.firstname%></h5>
 <h5>Прізвище:  <%=current_user.userparam.lastname%></h5>
