--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,28 +1,25 @@
 <div class="login-page" class="container">
   <div class="registration-form" class="form">
-  <center style="margin-top:15%;"><h2>Sign up</h2>
-
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
     <div class="form-group" class="field">
-      <p><%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" ,  class: "input-sign", placeholder:"Введіть ваш nickname", class:"input" %>
+      <p><%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" ,  class: "input-sign", placeholder:"Nickname", class:"input" %>
     </div>
 
     <div class="form-group" class="field">
-      <p><%= f.email_field :email, autofocus: true, autocomplete: "email" ,  class: "input-sign", placeholder:"Введіть ваш емейл", class:"input" %>
+      <p><%= f.email_field :email, autofocus: true, autocomplete: "email" ,  class: "input-sign", placeholder:"Email", class:"input" %>
     </div>
 
     <div class="form-group" class="field">
 
-      <p><%= f.password_field :password, autocomplete: "new-password" ,  class: "input-sign", placeholder:"Введіть ваш пароль", class:"input" %>
-        <br /><% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> символів мінімум)</em>
+      <p><%= f.password_field :password, autocomplete: "new-password" ,  class: "input-sign", placeholder:"Password", class:"input" %>
+      <% if @minimum_password_length %>
         <% end %><br />
     </div>
 
     <div class="form-group" class="field">
-      <p><%= f.password_field :password_confirmation, autocomplete: "new-password" ,  class: "input-sign", placeholder:"Повторіть пароль", class:"input" %>
+      <p><%= f.password_field :password_confirmation, autocomplete: "new-password" ,  class: "input-sign", placeholder:"Confirm password", class:"input" %>
     </div>
 
     <div class="form-group" class="actions">
@@ -30,7 +27,7 @@
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <%= render "users/shared/links" %>
   </center>
   </div>
 </div>
