--- a/app/views/load/windows_seven_themes/show.html.erb
+++ b/app/views/load/windows_seven_themes/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Load::WindowsSevenThemes#show</h1>
-<p>Find me in app/views/load/windows_seven_themes/show.html.erb</p>
+<br>
+Title:<%= @windows_seven_theme.name%><br>
+Author:<%= @windows_seven_theme.author%><br>
+System: <%= @windows_seven_theme.system.name%><br>
+Views : <%= @windows_seven_theme.views %><br>
+Guide: <%= @windows_seven_theme.guide%><br>
+Description:<%= @windows_seven_theme.description%>
