--- a/app/views/windows_eight_themes/index.html.erb
+++ b/app/views/windows_eight_themes/index.html.erb
@@ -1,2 +1,1 @@
-<h1>Load::WindowsEightThemes#index</h1>
-<p>Find me in app/views/load/windows_eight_themes/index.html.erb</p>
+<%= render @windows_eight_themes %>
