--- a/app/views/systems/_system.html.erb
+++ b/app/views/systems/_system.html.erb
@@ -1,1 +1,7 @@
-<li class="item float-item"><%=link_to system.name, system_path(system.name) %></li>
+
+  <div class="card">
+      <div class="card-body">
+        <%=link_to system.name, system_path(system.name), class:"btn btn-light card-title", style:"width:100%; color:#666FB0,overflow:auto"%>
+        <p class="card-text">Публікацій: <%=Tag.where(system_id: system.id, object_type: "WindowsEightTheme").count%></p>
+        </div>
+    </div>
