after sign-up  create userparam and redirect_to edit userparam

--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -7,7 +7,7 @@ Author:
 <% end %>
 
 System: <%= @theme.system.name%><br>
-
+Link : <%= @theme.download %> <br>
 Views : <%= @theme.views %><br>
 Description:<%= @theme.description%>
 Tags:
