--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,4 @@
-<center><h3>The Earth goes around the Sun</h3></center>
-<%= render @systems %>
-<%= render @themes %>
+<br><br>
+<center>
+  <h3>The Earth goes around the Sun</h3>
+</center>
