--- a/app/views/userparams/_form.html.erb
+++ b/app/views/userparams/_form.html.erb
@@ -1,13 +1,12 @@
-
-<div class="form-group" class="field">
-<%= f.file_field :avatar, class:"input", placeholder:"Avatar" %><br>
+<div class="field">
+  <%= f.file_field :avatar, class:"input", placeholder:"Avatar" %><br>
 </div>
-<div class="form-group" class="field">
-<%= f.text_field :firstname, class:"input", placeholder:"Name" %><br>
+<div class="field">
+  <%= f.text_field :firstname, class:"input", placeholder:"Name" %><br>
 </div>
-<div class="form-group" class="field">
-<%= f.text_field :lastname, class:"input", placeholder:"Forname" %><br>
+<div class="field">
+  <%= f.text_field :lastname, class:"input", placeholder:"Forname" %><br>
 </div>
-<div class="form-group" class="field">
-<%= f.text_field :age, class:"input", placeholder:"Age" %><br>
+<div class="field">
+  <%= f.text_field :age, class:"input", placeholder:"Age" %><br>
 </div>
