--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Themes#index</h1>
-<p>Find me in app/views/themes/index.html.erb</p>
+<% if @themes == []%>
+nothing
+<% else %>
+<%= render @themes %>
+<%end %>
