Show tags relative to the system(Windows-7/8/10/Ubuntu)

--- a/app/views/systems/_system.html.erb
+++ b/app/views/systems/_system.html.erb
@@ -1,5 +1,5 @@
   <div class="card">
     <div class="card-body">
-      <%=link_to system.name, system_path(system.name), class:"btn btn-light card-title", style:"width:100%; color:#666FB0,overflow:auto"%>
+      <%=link_to system.name, system_path(system.name)%>
         </div>
   </div><br>
