--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -7,7 +7,9 @@ Author:
 <% end %>
 
 System:
-<%= @theme.system.name%><br>
+<%@theme.systems.each do |system|%>
+<%= system.name %><br>
+<%end%>
 Link :
 <%= @theme.download %>
 <br>
