--- a/app/views/themes/_theme.html.erb
+++ b/app/views/themes/_theme.html.erb
@@ -1,11 +1,15 @@
 <br>
-Title:<%= theme.name%><br>
+Title:
+<%= theme.name%><br>
+
 <% theme.photos.each do |x| %>
   <%= image_tag x.url[0] %>
 <% end %>
 
 System:
-<%= theme.system.name%><br>
+<% theme.systems.each do |system| %>
+<%= system.name %><br>
+<% end %>
 
 Views :
 <%= theme.views %><br>
