--- a/app/views/userparams/edit.html.erb
+++ b/app/views/userparams/edit.html.erb
@@ -1,7 +1,7 @@
 <h3>Профіль користувача
   <b><%=@userparam.user.email.split('@').first%></b>
 </h3>
-<%=form_for @userparam, url:userparam_path(current_user.id) do |f|%>
+<%=form_for @userparam, url:userparam_path(@userparam.id) do |f|%>
 <%=render 'userparams/form', f:f%>
 <%=f.submit "Update", class:"btn btn-primary"%>
 <%end%>
