Create controller/model comments with polymorphic and belongs_to :object. User can write and read comments

--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,1 +1,4 @@
-<a><%=link_to category.name, category_path(category.name), class:"text-secondary"%> |  <%=Tag.where(category_id: category.id, object_type: "Theme").count%>| </a
+<a><%=link_to category.name, category_path(category.name), class:"text-secondary"%>
+  |
+  <%=Tag.where(category_id: category.id, object_type: "Theme").count%>|
+</a>
