Update views & add client_site_validates

--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,3 +1,5 @@
+Tags:
+<br>
 <a><%=link_to category.name, category_path(category.name), class:"text-secondary"%>
   |
   <%=Tag.where(category_id: category.id, object_type: "Theme").count%>|
