--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,5 +1,5 @@
 <% if @themes == []%>
-nothing
+  <%= link_to "Add your Theme!", new_theme_path%>
 <% else %>
-<%= render @themes %>
+  <%= render @themes %>
 <%end %>
