--- a/app/views/themes/_theme.html.erb
+++ b/app/views/themes/_theme.html.erb
@@ -1,18 +1,21 @@
 <br>
-Title:
+Title:<br>
 <%= theme.name%><br>
 
 <% theme.photos.each do |x| %>
   <%= image_tag x.url[0] %>
 <% end %>
-
+<br>
 System:
+<br>
 <% theme.systems.each do |system| %>
-<%= system.name %><br>
+  <%= system.name %><br>
 <% end %>
 
 Views :
 <%= theme.views %><br>
 
 <%= link_to "More", theme_path(theme.id)%>
+
+<hr>
 <br>
