--- a/app/views/themes/edit.html.erb
+++ b/app/views/themes/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Themes#edit</h1>
-<p>Find me in app/views/themes/edit.html.erb</p>
+<h3>Theme:
+  <b><%=@theme.name%></b>
+</h3>
+<%=form_for @theme, url:theme_path(@theme.id) do |f|%>
+<%=render 'themes/form', f:f%>
+<%=f.submit "Update", class:"btn btn-primary"%>
+<%end%>
