--- a/app/views/themes/new.html.erb
+++ b/app/views/themes/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @theme, local: true) do |f| %>
+<%= simple_form_for @theme,url:themes_path , validate: true do |f| %>
 <%= render 'themes/form', f:f%>
 <%= f.submit "Створити" %>
 <% end %>
