--- a/app/views/userparams/new.html.erb
+++ b/app/views/userparams/new.html.erb
@@ -1,5 +1,5 @@
-<div class="col-md-6 col-md-offset-3 login-box">
-  <%= form_for @userparam, url: userparams_path do |f| %>
+<div class="col-2 login-box">
+  <%= simple_form_for @userparam, url: userparams_path, validate: true do |f| %>
   <%=render 'userparams/form', f:f%>
   <%= f.submit "Create", class:"btn btn-primary" %>
 <% end %>
