--- a/app/views/userparams/_form.html.erb
+++ b/app/views/userparams/_form.html.erb
@@ -2,11 +2,11 @@
   <%= f.file_field :avatar, class:"input", placeholder:"Avatar" %><br>
 </div>
 <div class="field">
-  <%= f.text_field :firstname, class:"input", placeholder:"Name" %><br>
+  <%= f.text_field :firstname, class:"input", placeholder:"Your Last Name" %><br>
 </div>
 <div class="field">
-  <%= f.text_field :lastname, class:"input", placeholder:"Forname" %><br>
+  <%= f.text_field :lastname, class:"input", placeholder:"Your Last Name" %><br>
 </div>
 <div class="field">
-  <%= f.text_field :age, class:"input", placeholder:"Age" %><br>
+  <%= f.text_field :age, class:"input", placeholder:"Your Age" %><br>
 </div>
