--- a/app/views/userparams/show.html.erb
+++ b/app/views/userparams/show.html.erb
@@ -14,6 +14,6 @@
 <%if user_signed_in? && current_user.id == @userparam.id%>
 
   <%=link_to "Редагувати профіль", edit_userparam_path(@userparam.id)%><br>
-  <%=link_to "Change devise profile", edit_user_registration_path%><br>
+  <%=link_to "Налаштування", edit_user_registration_path%><br>
 
 <%end%>
