--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,39 +1,44 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<%= link_to "Root", root_path %>
+<nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
+  <a class="navbar-brand">THEMES</a>
+  <ul class="navbar-nav ml-auto">
+  <li class="nav-item"><%= link_to "Home", root_path, class:"nav-link" %></li>
 
-<li class="dropdown">
-  <a class="dropdown-toggle" data-toggle="dropdown">Теми
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu">
-    <% System.all.each do |system|%>
-      <li data-toggle="modal"><%=link_to system.name , system_path(system.name)%></li>
-    <%end%>
-  </ul>
-</li>
-<% if user_signed_in? %>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">Themes
+      <span class="caret"></span>
+    </a>
+      <ul class="dropdown-menu">
+        <% System.all.each do |system|%>
+          <li data-toggle="modal"><%=link_to system.name , system_path(system.name), class:"nav-link dropdown-item"%></li>
+        <%end%>
+        </ul>
+  </li>
 
-  <% if current_user.userparam.nil? %>
 
-    <%= link_to "Profile", new_userparam_path%>
-    |
+  <% if user_signed_in? %>
+
+    <% if current_user.userparam.nil? %>
+      
+      <li class="nav-item"><%= link_to "Profile", new_userparam_path, class:"nav-link"%></li>
+
+    <% else %>
+
+      <li class="nav-item"><%= link_to "Profile", userparam_path(current_user.id), class:"nav-link"%></li>
+
+    <% end %>
+
+    <li class="nav-item"><%= link_to "Add your Theme!", new_theme_path, class:"nav-link"%></li>
+
+    <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete, class:"nav-link" %></li>
 
   <% else %>
 
-    <%= link_to "Profile", userparam_path(current_user.id)%>
-    |
+    <li class="nav-item ml-auto"><%= link_to "Login", new_user_session_path, class:"nav-link" %></li>
+    <li class="nav-item ml-auto"><%= link_to "Registration", new_user_registration_path, class:"nav-link" %></li>
 
   <% end %>
+  </ul>
+</nav>
 
-  <%= link_to "Add your Theme!", new_theme_path%>
-  |
-
-  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-
-<% else %>
-
-  <%= link_to "Login", new_user_session_path %>
-  <%= link_to "Registration", new_user_registration_path %>
-
-<% end %>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
