--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -31,15 +31,7 @@ Download:<br>
 <br><br>
 
 <% if user_signed_in? %>
-
-  Input something :)
-  <br>
-  <%= form_for :comment, url:comments_path do |f| %>
-  <%= render 'comments/comment', f:f%>
-  <%= f.hidden_field :object_type, value: @theme.class.name%>
-  <%= f.hidden_field :object_id, value: @theme.id%>
-  <%= f.submit "Create" %>
-<% end %>
+<%= render 'comments/form'%>
 <% else %>
 <br>
 Want to create a new comment?<br>
@@ -49,10 +41,9 @@ or
 
 <% end%>
 
-<% Comment.where(object: @theme).each do |comment| %>
-<br>User:
-<%= comment.user.userparam.username %>
 <br>
-<%= comment.text%>
-<hr>
-<%end%>
+<ul class="content-list content-list_comments">
+  <% @comments.each do |comment| %>
+    <%=render 'comments/comment', comment:comment %>
+  <%end%>
+</ul>
