--- a/app/views/themes/_theme.html.erb
+++ b/app/views/themes/_theme.html.erb
@@ -16,9 +16,9 @@ Views :
 <%= theme.views %><br>
 Comments :
 <br>
-<%= link_to "like", like_path(theme.id)%>
+<%= link_to "like", theme_like_path(theme.id)%>
 <%= theme.likes.length %>|<br>
-<%= link_to "dislike", dislike_path(theme.id) %>
+<%= link_to "dislike", theme_dislike_path(theme.id) %>
 <%= theme.dislikes.length %>
 <hr>
 <br>
