--- a/app/views/themes/_theme.html.erb
+++ b/app/views/themes/_theme.html.erb
@@ -20,5 +20,7 @@ Comments :
 <%= theme.likes.length %>|<br>
 <%= link_to "dislike", theme_dislike_path(theme.id) %>
 <%= theme.dislikes.length %>
+<br>
+<%= link_to "More", theme_path(theme.id)%>
 <hr>
 <br>
