--- a/app/views/userparams/show.html.erb
+++ b/app/views/userparams/show.html.erb
@@ -1,37 +1,44 @@
 <div class="user-profile container-fluid">
-	
+
 	<div class="row">
 		<div class="col-lg-3"></div>
 		<div class="col-sm-6 col-lg-3 center">
-       		<span class="profile-picture">
-           	<%= image_tag @userparam.avatar.url(:thumb), class:"img-thumbnail"%>
+			<span class="profile-picture">
+				<%= image_tag @userparam.avatar.url(:thumb), class:"img-thumbnail"%>
 			</span>
 
 			<%if user_signed_in? && current_user.id == @userparam.id%>
 
-			<%=link_to "Edit Profile", edit_userparam_path(@userparam.id), class:"btn btn-sm btn-block btn-primary"%><br>
-			<%=link_to "Settings", edit_user_registration_path, class:"btn btn-sm btn-block btn-primary"%><br>
+				<%=link_to "Edit Profile", edit_userparam_path(@userparam.id), class:"btn btn-sm btn-block btn-primary"%><br>
+				<%=link_to "Settings", edit_user_registration_path, class:"btn btn-sm btn-block btn-primary"%><br>
 
 			<%end%>
 
-		</div><!-- /.col -->
+		</div>
+		<!-- /.col -->
 
 		<div class="col-sm-6 col-lg-3">
 			<h4 class="blue">
-				<span class="middle">Welcome to <%=@userparam.username%> profile</span>
+				<span class="middle">Welcome to
+					<%=@userparam.username%>
+					profile</span>
 			</h4>
 
 			<div class="profile-user-info">
 				<div class="profile-info-row">
-					<div class="profile-info-name"> Username </div>
+					<div class="profile-info-name">
+						Username
+					</div>
 
 					<div class="profile-info-value">
-						<span><%=@userparam.username%></span>               
-   					</div>
-   				</div>
+						<span><%=@userparam.username%></span>
+					</div>
+				</div>
 
-   				<div class="profile-info-row">
-					<div class="profile-info-name"> First Name </div>
+				<div class="profile-info-row">
+					<div class="profile-info-name">
+						First Name
+					</div>
 
 					<div class="profile-info-value">
 						<span><%=@userparam.firstname%></span>
@@ -39,26 +46,62 @@
 				</div>
 
 				<div class="profile-info-row">
-					<div class="profile-info-name"> Last Name </div>
+					<div class="profile-info-name">
+						Last Name
+					</div>
 
 					<div class="profile-info-value">
 						<span><%=@userparam.lastname%></span>
 					</div>
 				</div>
-							  
+
 				<div class="profile-info-row">
-					<div class="profile-info-name"> Age </div>
+					<div class="profile-info-name">
+						Age
+					</div>
 
 					<div class="profile-info-value">
 						<span><%=@userparam.age%></span>
 					</div>
- 				</div>
-                
+				</div>
+
 			</div>
-			
-		</div><!-- /.col -->
+
+		</div>
+		<!-- /.col -->
 		<div class="col-lg-3"></div>
-	</div><!-- /.row -->
-				
-		
+	</div>
+	<!-- /.row -->
+
+	Chosens:
+	<br>
+	<% @userparam.user.chosens.each do |x| %>
+		<br>
+		Title:<br>
+		<%= x.theme.name%><br>
+
+		<% x.theme.photos.each do |x| %>
+			<%= image_tag x.url[0] %>
+		<% end %>
+		<br>
+		System:
+		<br>
+		<% x.theme.systems.each do |system| %>
+			<%= system.name %><br>
+		<% end %>
+
+		Views :
+		<%= x.theme.views %><br>
+		Comments :
+		<br>
+		<%= link_to "like", theme_like_path(x.theme.id)%>
+		<%= x.theme.likes.length %>|<br>
+		<%= link_to "dislike", theme_dislike_path(x.theme.id) %>
+		<%= x.theme.dislikes.length %>
+		<br>
+		<%= link_to "More", theme_path(x.theme.id)%>
+		<hr>
+		<br>
+	<% end %>
+
 </div>
