--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -52,3 +52,5 @@ Download:<br>
     <%=render 'comments/comment', comment:comment %>
   <%end%>
 </ul>
+Similar themes:
+<%= render @theme_recommendation%>
