--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,50 +1,51 @@
 <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
   <a class="navbar-brand">THEMES</a>
   <ul class="navbar-nav ml-auto">
-  <li class="nav-item"><%= link_to "Home", root_path, class:"nav-link" %></li>
+    <li class="nav-item"><%= link_to "Home", root_path, class:"nav-link" %></li>
 
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">Themes
-      <span class="caret"></span>
-    </a>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">Themes
+        <span class="caret"></span>
+      </a>
       <ul class="dropdown-menu">
         <% System.all.each do |system|%>
           <li data-toggle="modal"><%=link_to system.name , system_path(system.name), class:"nav-link dropdown-item"%></li>
         <%end%>
-        </ul>
-  </li>
+      </ul>
+    </li>
 
+    <% if user_signed_in? %>
 
-  <% if user_signed_in? %>
+      <% if current_user.userparam.nil? %>
 
-    <% if current_user.userparam.nil? %>
+        <li class="nav-item"><%= link_to t("userparam"), new_userparam_path, class:"nav-link"%></li>
 
-      <li class="nav-item"><%= link_to t("userparam"), new_userparam_path, class:"nav-link"%></li>
+      <% else %>
+
+        <li class="nav-item"><%= link_to t("userparam") , userparam_path(current_user.id), class:"nav-link"%></li>
+
+        <li class="nav-item"><%= link_to "Messages" , conversations_path, class:"nav-link"%></li>
+
+      <% end %>
+
+      <li class="nav-item"><%= link_to "Add your Theme!", new_theme_path, class:"nav-link"%></li>
+
+      <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete, class:"nav-link" %></li>
 
     <% else %>
 
-      <li class="nav-item"><%= link_to t("userparam") , userparam_path(current_user.id), class:"nav-link"%></li>
+      <li class="nav-item ml-auto"><%= link_to "Login", new_user_session_path, class:"nav-link" %></li>
+      <li class="nav-item ml-auto"><%= link_to "Registration", new_user_registration_path, class:"nav-link" %></li>
 
     <% end %>
-
-    <li class="nav-item"><%= link_to "Add your Theme!", new_theme_path, class:"nav-link"%></li>
-
-    <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete, class:"nav-link" %></li>
-
-  <% else %>
-
-    <li class="nav-item ml-auto"><%= link_to "Login", new_user_session_path, class:"nav-link" %></li>
-    <li class="nav-item ml-auto"><%= link_to "Registration", new_user_registration_path, class:"nav-link" %></li>
-
-  <% end %>
   </ul>
   <li class="nav-lang is-first text-sm-center">
-<% if I18n.locale == :uk %>
-<%= link_to 'EN', { locale: :en }, { class: 'btn btn-main-ghost' } %>
-<% else %>
-<%= link_to 'UA', { locale: :uk }, { class: 'btn btn-main-ghost' } %>
-<% end %>
-</li>
+    <% if I18n.locale == :uk %>
+      <%= link_to 'EN', { locale: :en }, { class: 'btn btn-main-ghost' } %>
+    <% else %>
+      <%= link_to 'UA', { locale: :uk }, { class: 'btn btn-main-ghost' } %>
+    <% end %>
+  </li>
 </nav>
 
 <p class="notice"><%= notice %></p>
