add i18n for views/users

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -44,7 +44,7 @@
 
         <%else%>
 
-        <li class="nav-item ml-auto"><%= link_to t(:login), new_user_session_path, class:"nav-link" %></li>
+        <li class="nav-item ml-auto"><%= link_to t(:log_in), new_user_session_path, class:"nav-link" %></li>
 
         <% end %>
     </ul>
