--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,25 +1,27 @@
-<h2>Change your password</h2>
+<div class="login-page" class="container">
+  <div class="registration-form" class="form">
+  <h2><%= t :changeyp%></h2>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.hidden_field :reset_password_token %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+    <div class="form-group" class="field">
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+      <p><%= f.password_field :password, autocomplete: "new-password" ,  class: "input-sign", placeholder: t(:password), class:"input" %>
+      <% if @minimum_password_length %>
+        <% end %><br />
+    </div>
+
+    <div class="form-group" class="field">
+      <p><%= f.password_field :password_confirmation, autocomplete: "off", class: "input-sign", placeholder: t(:nconfirm), class:"input" %>
+    </div>
+
+    <div class="form-group" class="actions">
+      <p><%= f.submit t(:update,), class:"btn btn-primary" %>
+    </div>
+  <% end %>
+
+  <%= render "users/shared/links" %>
+  </center>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
