--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,14 +1,14 @@
 <div class="login-page" class="container">
   <div class="registration-form" class="form">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <h2><%= t(:edit)%> <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <div class="form-group" class="field">
-  <%= f.email_field :nickname, autofocus: true, autocomplete: "nickname", class: "form-control", class:"input", placeholder:"Your nickname" %>
+  <%= f.email_field :nickname, autofocus: true, autocomplete: "nickname", class: "form-control", class:"input", placeholder: t(:nickname) %>
   </div>
   <div class="form-group" class="field">
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"input", placeholder:"Your email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"input", placeholder: t(:email) %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -16,24 +16,24 @@
   <% end %>
 
   <div class="form-group" class="field"><i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password", class:"input", placeholder:"Password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class:"input", placeholder: t(:password) %>
   </div>
 
   <div class="form-group" class="field">
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"input", placeholder:"Password confirmation" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"input", placeholder: t(:nconfirm) %>
   </div>
 
   <div class="form-group" class="field">
-    <%= f.password_field :current_password, autocomplete: "current-password", class:"input", placeholder:"Your current password" %>
+    <%= f.password_field :current_password, autocomplete: "current-password", class:"input", placeholder: t(:ypassword) %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update", class:"btn btn-primary" %>
+    <%= f.submit t(:update), class:"btn btn-primary" %>
   </div>
 <% end %>
 
-<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-secondary" %></p>
+<%= button_to t(:delete), registration_path(resource_name), data: { confirm: t(:confask) }, method: :delete, class:"btn btn-secondary" %></p>
 
-<%= link_to "Back", :back, class:"btn btn-secondary" %>
+<%= link_to t(:back), :back, class:"btn btn-secondary" %>
 </div>
 </div>
