--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,26 +4,26 @@
     <%= devise_error_messages! %>
 
     <div class="form-group" class="field">
-      <p><%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" ,  class: "input-sign", placeholder:"Nickname", class:"input" %>
+      <p><%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" ,  class: "input-sign", placeholder: t(:nickname), class:"input" %>
     </div>
 
     <div class="form-group" class="field">
-      <p><%= f.email_field :email, autofocus: true, autocomplete: "email" ,  class: "input-sign", placeholder:"Email", class:"input" %>
+      <p><%= f.email_field :email, autofocus: true, autocomplete: "email" ,  class: "input-sign", placeholder: t(:email), class:"input" %>
     </div>
 
     <div class="form-group" class="field">
 
-      <p><%= f.password_field :password, autocomplete: "new-password" ,  class: "input-sign", placeholder:"Password", class:"input" %>
+      <p><%= f.password_field :password, autocomplete: "new-password" ,  class: "input-sign", placeholder: t(:password), class:"input" %>
       <% if @minimum_password_length %>
         <% end %><br />
     </div>
 
     <div class="form-group" class="field">
-      <p><%= f.password_field :password_confirmation, autocomplete: "new-password" ,  class: "input-sign", placeholder:"Confirm password", class:"input" %>
+      <p><%= f.password_field :password_confirmation, autocomplete: "new-password" ,  class: "input-sign", placeholder: t(:confirm), class:"input" %>
     </div>
 
     <div class="form-group" class="actions">
-      <p><%= f.submit "Sign up", class:"btn btn-primary" %>
+      <p><%= f.submit t(:signup), class:"btn btn-primary" %>
     </div>
   <% end %>
 
